--- a/bs-config.json
+++ b/bs-config.json
@@ -3,7 +3,8 @@
     "baseDir": "src/demo",
     "routes": {
       "/node_modules": "node_modules",
-      "/quickstart-lib": "src/lib"
+      "/cedrus-fusion-business": "src/lib",
+       "/assets": "src/lib/assets"
     }
   }
 }
