--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "quickstart-lib",
+  "name": "cedrus-fusion-business",
   "version": "1.0.0",
   "description": "Library QuickStart package.json from the documentation, supplemented with testing support",
-  "main": "./bundles/quickstart-lib.umd.js",
-  "module": "./quickstart-lib.es5.js",
-  "es2015": "./quickstart-lib.js",
-  "typings": "./quickstart-lib.d.ts",
+  "main": "./bundles/cedrus-fusion-business.umd.js",
+  "module": "./cedrus-fusion-business.es5.js",
+  "es2015": "./cedrus-fusion-business.js",
+  "typings": "./cedrus-fusion-business.d.ts",
   "author": "",
   "license": "MIT",
   "repository": {},
@@ -21,7 +21,6 @@
     "build-demo:watch": "tsc -p src/demo/ -w",
     "serve": "lite-server -c=bs-config.json",
     "prestart": "npm run build-demo",
-    "start": "concurrently \"npm run build-demo:watch\" \"npm run serve\"",
     "build-test": "tsc -p src/lib/tsconfig.spec.json",
     "build-test:watch": "tsc -p src/lib/tsconfig.spec.json -w",
     "pretest": "npm run build-test",
@@ -38,6 +37,8 @@
     "@angular/core": ">=4.0.0 <5.0.0 || >=4.0.0-beta <5.0.0"
   },
   "devDependencies": {
+    "@angular/http": "^4.2.3",
+    "@angular/material": "^2.0.0-beta.7",
     "@angular/common": "~4.1.3",
     "@angular/compiler": "~4.1.3",
     "@angular/compiler-cli": "~4.1.3",
@@ -67,5 +68,9 @@
     "tslint": "^4.4.2",
     "typescript": "^2.2.1",
     "zone.js": "^0.8.4"
+  },
+  "dependencies": {
+    "cedrus-fusion": "^1.3.1",
+    "hammerjs": "^2.0.8"
   }
 }
