--- a/src/lib/tsconfig.es5.json
+++ b/src/lib/tsconfig.es5.json
@@ -14,8 +14,8 @@
     "annotateForClosureCompiler": true,
     "strictMetadataEmit": true,
     "skipTemplateCodegen": true,
-    "flatModuleOutFile": "quickstart-lib.js",
-    "flatModuleId": "quickstart-lib",
+    "flatModuleOutFile": "cedrus-fusion-business.js",
+    "flatModuleId": "cedrus-fusion-business",
     "genDir": "../../out-tsc/lib-gen-dir/"
   }
 }
