Build succeeded: Added News Service

--- a/src/lib/tsconfig.json
+++ b/src/lib/tsconfig.json
@@ -15,8 +15,8 @@
         "annotateForClosureCompiler": true,
         "strictMetadataEmit": true,
         "skipTemplateCodegen": true,
-        "flatModuleOutFile": "cedrus-fusion.js",
-        "flatModuleId": "cedrus-fusion",
+        "flatModuleOutFile": "cedrus-fusion-business.js",
+        "flatModuleId": "cedrus-fusion-business",
         "genDir": "../../out-tsc/lib-gen-dir/"
     }
 }
